--- a/setting/scss/style.scss
+++ b/setting/scss/style.scss
@@ -1,11 +1,7 @@
 @import 'base';
-
-
-@import 'header';
-
-
 @import 'mixin';
 
+@import 'hamburger';
 
-
-@import 'hamburger'
+@import 'header';
+@import 'navbar';
