--- a/setting/scss/_base.scss
+++ b/setting/scss/_base.scss
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap");
 *,
 *::before,
 *::after {
@@ -6,8 +7,7 @@
   padding: 0;
 }
 body {
-  font-family: "Gilroy", sans-serif;
-
+  font-family: "Montserrat", sans-serif;
 }
 
 a {
@@ -23,16 +23,8 @@ h6 {
   color: #fff;
 }
 
-p {
-  font-weight: 400;
-  font-size: 1.25rem;
-  line-height: 1.5625rem;
-  color: #cfcfcf;
-}
 
 .conteiner {
-  max-width: 1920px;
+  max-width: 100%;
   margin: 0 auto;
-  padding: 15px;
 }
-
