--- a/setting/scss/_navbar.scss
+++ b/setting/scss/_navbar.scss
@@ -3,40 +3,141 @@
   align-items: center;
   justify-content: center;
   gap: 67px;
-
-    &__strokes {
-    display: flex;
+  padding: 20px;
+  @include _1250px {
     gap: 20px;
   }
-    &__link {
+  @include _350px{
+    gap: 25px;
+    padding: 10px;
+  }
+  &__logo {
+    @include _768px {
+      max-width: 80px;
+      height: 60px;
+    }
+  }
+  &__strokes {
+    display: flex;
+    gap: 20px;
+    @include _1100px {
+      display: flex;
+      position: fixed;
+      top: 0;
+      right: 0;
+      width: 400px;
+      height: 100vh;
+      background: #ffffff;
+      box-shadow: 0px 0 10px rgb(67, 67, 67);
+
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      gap: 20px;
+
+      transform: translateX(calc(100% + 10px));
+      will-change: transform;
+      transition: 0 4s linear;
+    }
+  }
+  &__link {
     font-size: 14px;
     line-height: 17px;
     font-weight: 500;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    gap: 6.15px;
+    color: #000000;
+
+    &:active {
+      color: #001797;
+    }
   }
-    &__details {
+  &__auth{
+    display: flex;
+    gap: 40px;
+    align-items: center;
+  }
+  &__details {
     display: flex;
     gap: 40px;
     align-items: center;
 
-        &__dropdown{
-
-            &__text{
-                font-weight: 500;
-                font-size: 14px;
-                line-height: 17px;
-            }
-
-        }
-        
-        &__auth{
-            font-weight: 500;
-            font-size: 14px;
-            line-height: 17px;
-        }
-        &__number {
-        font-weight: 500;
-        font-size: 16px;
-        line-height: 26px;
+    @include _768px {
+      gap: 20px;
+      flex-direction: column-reverse;
+      text-align: center;
     }
+
+    @include _350px{
+      gap: 10px;
+      
+    }
+    &__dropdown {
+      display: flex;
+      gap: 10px;
+      align-items: center;
+      @include _768px {
+        gap: 5px;
+      }
+      &__text {
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 17px;
+        text-decoration: underline;
+        cursor: pointer;
+        color: #000000;
+        @include _768px {
+          font-size: 10px;
+          line-height: 10px;
+        }
+      }
+    }
+
+    &__auth {
+      font-weight: 500;
+      font-size: 14px;
+      line-height: 17px;
+      cursor: pointer;
+      @include _768px {
+        font-size: 10px;
+        display: none;
+      }
+    }
+    &__number {
+      font-weight: 500;
+      font-size: 16px;
+      line-height: 26px;
+      color: #00093c;
+      cursor: pointer;
+      display: flex;
+      gap: 8.72px;
+      @include _1250px{
+        font-size: 11.5px;
+        line-height: 20px;
+      }
+      @include _768px {
+        font-size: 13px;
+        line-height: 10px;
+        display: none;
+      }
+      
+    }
+  }
+}
+.navbar__strokes.is-active {
+  transform: translateX(0);
+}
+.phone{
+  display: none;
+  @include _768px {
+    display: inline-block;
+  }
+}
+.auth{
+  display: none;
+  @include _768px {
+    display: inline-block;
   }
 }
