--- a/setting/scss/_header.scss
+++ b/setting/scss/_header.scss
@@ -1,7 +1,7 @@
 .header {
   flex-wrap: nowrap;
   &__banner {
-    background-image: url(/setting/img/banner.jpg);
+    background-image: url(setting/img/banner.jpg);
     background-size: cover;
     background-position: center;
     max-width: 100%;  
