--- a/setting/scss/_info.scss
+++ b/setting/scss/_info.scss
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: center;
   margin-top: 20px;
+  flex-wrap: nowrap;
   @include _1150px {
     flex-direction: column;
     align-items: center;
