--- a/setting/css/style.css
+++ b/setting/css/style.css
@@ -488,6 +488,7 @@ h6 {
     height: 100vh;
     background: #ffffff;
     box-shadow: 0px 0 10px rgb(67, 67, 67);
+    z-index: 20;
     flex-direction: column;
     align-items: center;
     justify-content: center;
