--- a/setting/scss/_navbar.scss
+++ b/setting/scss/_navbar.scss
@@ -30,6 +30,7 @@
       height: 100vh;
       background: #ffffff;
       box-shadow: 0px 0 10px rgb(67, 67, 67);
+      z-index: 20;
 
       flex-direction: column;
       align-items: center;
