--- a/setting/scss/_hamburger.scss
+++ b/setting/scss/_hamburger.scss
@@ -5,6 +5,7 @@ $hamburger-layer-width         : 30px !important;
 .hamburger {
   display: none;
   z-index: 30;
+  margin-left: auto;
   @include _1100px{
     display: inline-block;
   }
