--- a/setting/css/style.css
+++ b/setting/css/style.css
@@ -392,6 +392,11 @@ h6 {
   max-width: 100%;
   height: 500px;
 }
+@media (max-width: 800px) {
+  .header__banner {
+    background-image: url(../../setting/img/banner__mobile.png);
+  }
+}
 .header__banner__title {
   display: flex;
   justify-content: center;
@@ -409,9 +414,15 @@ h6 {
     padding: 125px 250px 30px 0px;
   }
 }
-@media (max-width: 768px) {
+@media (max-width: 800px) {
   .header__banner__title {
-    padding: 100px 170px 60px 0px;
+    align-items: center;
+    padding: 0px;
+    padding-top: 40px;
+  }
+}
+@media (max-width: 350px) {
+  .header__banner__title {
     gap: 10px;
   }
 }
@@ -427,10 +438,19 @@ h6 {
     font-size: 24px;
   }
 }
+@media (max-width: 800px) {
+  .header__banner__title_h1 {
+    font-size: 24px;
+  }
+}
+@media (max-width: 500px) {
+  .header__banner__title_h1 {
+    font-size: 20px;
+  }
+}
 @media (max-width: 350px) {
   .header__banner__title_h1 {
-    font-size: 16px;
-    line-height: 20px;
+    font-size: 14px;
   }
 }
 .header__banner__title_h2 {
@@ -445,10 +465,24 @@ h6 {
     font-size: 24px;
   }
 }
-@media (max-width: 350px) {
+@media (max-width: 800px) {
+  .header__banner__title_h2 {
+    font-size: 24px;
+  }
+}
+@media (max-width: 800px) {
+  .header__banner__title_h2 {
+    font-size: 19px;
+  }
+}
+@media (max-width: 500px) {
   .header__banner__title_h2 {
     font-size: 16px;
-    line-height: 20px;
+  }
+}
+@media (max-width: 350px) {
+  .header__banner__title_h2 {
+    font-size: 14px;
   }
 }
 .header__banner__title_p {
@@ -464,10 +498,19 @@ h6 {
     font-size: 16px;
   }
 }
-@media (max-width: 350px) {
+@media (max-width: 800px) {
+  .header__banner__title_p {
+    font-size: 14px;
+  }
+}
+@media (max-width: 500px) {
   .header__banner__title_p {
     font-size: 10px;
-    line-height: 20px;
+  }
+}
+@media (max-width: 350px) {
+  .header__banner__title_p {
+    font-size: 7px;
   }
 }
 
