--- a/setting/scss/_header.scss
+++ b/setting/scss/_header.scss
@@ -1,11 +1,14 @@
 .header {
   flex-wrap: nowrap;
   &__banner {
-    background-image: url('../../setting/img/banner.jpg');
+    background-image: url("../../setting/img/banner.jpg");
     background-size: cover;
     background-position: center;
-    max-width: 100%;  
+    max-width: 100%;
     height: 500px;
+    @include _800px {
+      background-image: url(../../setting/img/banner__mobile.png);
+    }
 
     &__title {
       display: flex;
@@ -13,14 +16,18 @@
       flex-direction: column;
       gap: 20px;
       padding: 127px 360px;
-      @include _1850px{
+      @include _1850px {
         padding: 126px;
       }
-      @include _1350px{
-        padding: 125px 250px 30px 0px; 
+      @include _1350px {
+        padding: 125px 250px 30px 0px;
       }
-      @include _768px{
-        padding: 100px 170px 60px 0px;
+      @include _800px {
+        align-items: center;
+        padding: 0px;
+        padding-top: 40px;
+      }
+      @include _350px{
         gap: 10px;
       }
       &_h1 {
@@ -29,12 +36,17 @@
         line-height: 44px;
         align-items: center;
         color: #ffffff;
-        @include _1350px{
+        @include _1350px {
           font-size: 24px;
         }
+        @include _800px{
+          font-size: 24px;
+        }
+        @include _500px{
+          font-size: 20px;
+        }
         @include _350px{
-          font-size: 16px;
-          line-height: 20px;
+          font-size: 14px;
         }
       }
       &_h2 {
@@ -43,12 +55,20 @@
         line-height: 44px;
         align-items: center;
         color: #ffffff;
-        @include _1350px{
+        @include _1350px {
           font-size: 24px;
         }
-        @include _350px{
+        @include _800px{
+          font-size: 24px;
+        } 
+        @include _800px{
+          font-size: 19px;
+        }
+        @include _500px{
           font-size: 16px;
-          line-height: 20px;
+        }
+        @include _350px{
+          font-size: 14px;
         }
       }
       &_p {
@@ -58,12 +78,17 @@
         line-height: 24px;
         align-items: center;
         color: #ffffff;
-        @include _1350px{
+        @include _1350px {
           font-size: 16px;
         }
-        @include _350px{
+        @include _800px{
+          font-size: 14px;
+        }
+        @include _500px{
           font-size: 10px;
-          line-height: 20px;
+        }
+        @include _350px{
+          font-size: 7px;
         }
       }
     }
