--- a/setting/css/style.css
+++ b/setting/css/style.css
@@ -213,44 +213,44 @@ h6 {
     max-width: 280px;
   }
 }
-.info__select__old__child {
+.info__select__old__section {
   display: flex;
   gap: 10px;
   align-items: center;
   padding: 14px;
   cursor: pointer;
 }
-.info__select__old__child__title {
+.info__select__old__section__title {
   display: flex;
   flex-direction: column;
   padding: 5px;
   gap: 5px;
 }
 @media (max-width: 350px) {
-  .info__select__old__child__title {
+  .info__select__old__section__title {
     padding: 0;
   }
 }
-.info__select__old__child__title_h1 {
+.info__select__old__section__title_h1 {
   font-weight: 700;
   font-size: 16px;
   line-height: 20px;
   color: #000000;
 }
 @media (max-width: 500px) {
-  .info__select__old__child__title_h1 {
+  .info__select__old__section__title_h1 {
     font-size: 10px;
     line-height: 10px;
   }
 }
-.info__select__old__child__title_p {
+.info__select__old__section__title_p {
   font-weight: 400;
   font-size: 12px;
   line-height: 15px;
   color: #4f4f4f;
 }
 @media (max-width: 500px) {
-  .info__select__old__child__title_p {
+  .info__select__old__section__title_p {
     font-size: 9px;
     line-height: 5px;
   }
@@ -370,7 +370,7 @@ h6 {
 }
 
 @media (max-width: 670px) {
-  .img__child {
+  .icon__section {
     display: none;
   }
 }
