--- a/setting/scss/_info.scss
+++ b/setting/scss/_info.scss
@@ -60,7 +60,7 @@
       @include _350px{
         max-width: 280px;
       }
-      &__child {
+      &__section {
         display: flex;
         gap: 10px;
         align-items: center;
@@ -199,7 +199,7 @@
     margin-left: 5px;
   }
 }
-.img__child{
+.icon__section{
   @include _670px{
     display: none;
   }
