--- a/setting/css/style.css
+++ b/setting/css/style.css
@@ -336,6 +336,113 @@ h6 {
   cursor: pointer;
   margin: 35px;
 }
+.info__main {
+  margin-left: 100px;
+}
+@media (max-width: 670px) {
+  .info__main {
+    margin-left: 17px;
+  }
+}
+@media (max-width: 500px) {
+  .info__main {
+    margin-left: 0;
+  }
+}
+.info__main__text {
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 34px;
+  color: #000000;
+  margin-left: 20px;
+  margin-top: -70px;
+}
+@media (max-width: 1100px) {
+  .info__main__text {
+    font-size: 16px;
+    line-height: 24px;
+  }
+}
+@media (max-width: 500px) {
+  .info__main__text {
+    margin-top: -30px;
+    font-size: 9px;
+    line-height: 16px;
+  }
+}
+.info__main__aside {
+  display: flex;
+  gap: 120px;
+  margin-top: 40px;
+  margin-left: 20px;
+}
+@media (max-width: 992px) {
+  .info__main__aside {
+    gap: 50px;
+  }
+}
+@media (max-width: 500px) {
+  .info__main__aside {
+    gap: 30px;
+  }
+}
+.info__main__aside__content {
+  display: flex;
+  flex-direction: column;
+}
+.info__main__aside__content_number {
+  font-weight: 700;
+  font-size: 86px;
+  line-height: 105px;
+  text-transform: capitalize;
+  color: white;
+  background: linear-gradient(90deg, #F7941D 0%, #4c8b09 25%, #27AAE1 40%);
+  background-size: 200% 200%;
+  -webkit-background-clip: text;
+  -webkit-text-stroke: 8px transparent;
+}
+@media (max-width: 1100px) {
+  .info__main__aside__content_number {
+    font-size: 60px;
+    line-height: 70px;
+    -webkit-text-stroke: 5px transparent;
+  }
+}
+@media (max-width: 992px) {
+  .info__main__aside__content_number {
+    font-size: 40px;
+    line-height: 40px;
+  }
+}
+@media (max-width: 500px) {
+  .info__main__aside__content_number {
+    font-size: 34px;
+    line-height: 40px;
+  }
+}
+@media (max-width: 350px) {
+  .info__main__aside__content_number {
+    font-size: 23px;
+    -webkit-text-stroke: 3px transparent;
+  }
+}
+.info__main__aside__content_text {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 34px;
+}
+@media (max-width: 1100px) {
+  .info__main__aside__content_text {
+    font-size: 16px;
+    line-height: 24px;
+  }
+}
+@media (max-width: 500px) {
+  .info__main__aside__content_text {
+    font-size: 10.5px;
+    line-height: 14px;
+  }
+}
 
 .border__progress {
   max-width: 160px;
