--- a/setting/css/style.css
+++ b/setting/css/style.css
@@ -336,6 +336,11 @@ h6 {
   cursor: pointer;
   margin: 35px;
 }
+@media (max-width: 1100px) {
+  .info__video {
+    margin: 0;
+  }
+}
 .info__main {
   margin-left: 100px;
 }
@@ -356,18 +361,13 @@ h6 {
   color: #000000;
   margin-left: 20px;
   margin-top: -70px;
-}
-@media (max-width: 1100px) {
-  .info__main__text {
-    font-size: 16px;
-    line-height: 24px;
-  }
+  max-width: 780px;
 }
 @media (max-width: 500px) {
   .info__main__text {
     margin-top: -30px;
-    font-size: 9px;
-    line-height: 16px;
+    font-size: 16px;
+    line-height: 1.2;
   }
 }
 .info__main__aside {
