--- a/setting/scss/_info.scss
+++ b/setting/scss/_info.scss
@@ -174,6 +174,9 @@
     justify-content: center;
     cursor: pointer;
     margin: 35px;
+    @include _1100px{
+      margin: 0;
+    }
   }
 
   &__main {
@@ -191,14 +194,11 @@
       color: #000000;
       margin-left: 20px;
       margin-top: -70px;
-      @include _1100px {
-        font-size: 16px;
-        line-height: 24px;
-      }
+      max-width: 780px;
       @include _500px {
         margin-top: -30px;
-        font-size: 9px;
-        line-height: 16px;
+        font-size: 16px;
+        line-height: 1.2 ;
       }
     }
     &__aside {
