--- a/setting/scss/_info.scss
+++ b/setting/scss/_info.scss
@@ -174,18 +174,24 @@
     justify-content: center;
     cursor: pointer;
     margin: 35px;
-    @include _1100px{
+    @include _1100px {
       margin: 0;
     }
   }
 
   &__main {
-    margin-left: 100px;
-    @include _670px{
-      margin-left: 17px;
+    display: flex;
+    justify-content: center; 
+    align-items: center; 
+    flex-direction: column;
+    @include _1100px{
+      display: block;
     }
-    @include _500px{
-      margin-left: 0;
+    @include _670px {
+      margin: 17px;
+    }
+    @include _500px {
+      margin: 0;
     }
     &__text {
       font-weight: 700;
@@ -195,24 +201,32 @@
       margin-left: 20px;
       margin-top: -70px;
       max-width: 780px;
+      margin-right: 400px;
+      @include _1200px{
+        margin-right: 0;
+      }
       @include _500px {
         margin-top: -30px;
         font-size: 16px;
-        line-height: 1.2 ;
+        line-height: 1.2;
       }
     }
     &__aside {
       display: flex;
       gap: 120px;
       margin-top: 40px;
-      margin-left: 20px;
-      @include _992px{
+      margin-left: 20px; 
+      margin-right: 320px;
+      @include _1200px{
+        margin-right: 0;
+      }
+      @include _992px {
         gap: 50px;
       }
-      @include _500px{
+      @include _500px {
         gap: 30px;
       }
-      
+
       &__content {
         display: flex;
         flex-direction: column;
@@ -222,24 +236,29 @@
           line-height: 105px;
           text-transform: capitalize;
           color: white;
-          background: linear-gradient(90deg, #F7941D 0%,#4c8b09 25% , #27AAE1 40%);          
+          background: linear-gradient(
+            90deg,
+            #f7941d 0%,
+            #4c8b09 25%,
+            #27aae1 40%
+          );
           background-size: 200% 200%;
           -webkit-background-clip: text;
           -webkit-text-stroke: 8px transparent;
-          @include _1100px{
+          @include _1100px {
             font-size: 60px;
-          line-height: 70px;
-          -webkit-text-stroke: 5px transparent;
+            line-height: 70px;
+            -webkit-text-stroke: 5px transparent;
           }
-          @include _992px{
+          @include _992px {
             font-size: 40px;
-          line-height: 40px;
+            line-height: 40px;
           }
-          @include _500px{
+          @include _500px {
             font-size: 34px;
-          line-height: 40px;
+            line-height: 40px;
           }
-          @include _350px{
+          @include _350px {
             font-size: 23px;
             -webkit-text-stroke: 3px transparent;
           }
@@ -248,20 +267,217 @@
           font-weight: 500;
           font-size: 20px;
           line-height: 34px;
-          @include _1100px{
+          @include _1100px {
             font-size: 16px;
             line-height: 24px;
           }
-          @include _500px{
+          @include _500px {
             font-size: 10.5px;
             line-height: 14px;
           }
         }
       }
     }
+    &__block {
+      margin-top: 80px;
+      gap: 20px;
+      display: grid;
+      grid-template-columns: minmax(480px, 1fr) repeat(2, minmax(330px, 1fr));
+      max-width: 1180.18px;
+      @include _1250px{
+        display: inline-block; 
+        max-width: 500px;
+      }
+      @include _1100px{
+        margin-left: 220px;
+      }
+      @include _992px{
+        margin-left: 200px;
+      }
+      @include _800px{
+        margin-left: 100px;
+      }
+      @include _670px{
+        margin-left: 60px;
+        max-width: 450px;
+      }
+      @include _500px{
+        margin-left: 40px;
+        max-width: 300px;
+      }
+      @include _350px{
+        max-width: 250px;
+        margin-left: 40px;
+      }
+      &__day-open-door {
+        display: flex;
+        background-color: #f7bc75;
+        padding: 44px;
+        border-radius: 20px;
+        gap: 40px;
+        grid-column: span 3;
+        @include _1250px{
+          display: block;
+          text-align: center;
+          margin-bottom: 10px;
+        }
+
+        &_date {
+          display: flex;
+          flex-direction: column;
+          &_num {
+            color: #000000;
+            font-size: 100px;
+            line-height: 80px;
+            font-weight: 700;
+          }
+          &_season {
+            color: #000000;
+            font-size: 30px;
+            font-weight: 700;
+          }
+        }
+        &_text {
+          display: flex;
+          flex-direction: column;
+          gap: 30px;
+          &_title {
+            font-weight: 500;
+            font-size: 36px;
+            line-height: 26px;
+          }
+          &_p {
+            font-weight: 400;
+            font-size: 18px;
+            line-height: 26px;
+            color: #333333;
+            max-width: 717px;
+          }
+        }
+        &_button {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          text-align: center;
+          &_btn {
+            padding: 18px 67px;
+            background-color: #f7bc75;
+            cursor: pointer;
+            display: flex;
+            gap: 10px;
+            text-align: center;
+          }
+        }
+      }
+      &__program {
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        align-items: center;
+        background: #c5ddff;
+        border-radius: 20px;
+        gap: 40px;
+        padding: 50px;
+        grid-row: span 2;
+        @include _1250px{
+          margin-bottom: 10px;
+        }
+        &_title {
+          font-weight: 500;
+          font-size: 24px;
+          line-height: 26px;
+        }
+        &_p {
+          font-weight: 400;
+          font-size: 16px;
+          line-height: 24px;
+          color: #333333;
+          max-width: 400px;
+        }
+        &_btn {
+          background: #c5ddff;
+          padding: 12px 61px;
+        }
+      }
+      &__news {
+        background: #b8efcf;
+        border-radius: 20px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        cursor: pointer;
+        gap: 45px;
+        &_title {
+          font-weight: 500;
+          font-size: 24px;
+          line-height: 26px;
+        }
+        @include _1250px{
+          margin-bottom: 10px;
+          padding: 30px;
+        }
+      }
+      &__world-it {
+        background: #ffeef6;
+        border-radius: 20px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 45px;
+        cursor: pointer;
+        @include _1250px{
+          padding: 30px;
+          margin-bottom: 10px;
+        }
+        &_title {
+          font-weight: 500;
+          font-size: 24px;
+          line-height: 26px;
+        }
+      }
+      &__test {
+        display: flex;
+        padding: 40px;
+        align-items: center;
+        background: #ffe38e;
+        border-radius: 20px;
+        gap: 30px;
+        cursor: pointer;
+
+        grid-column: span 2;
+        @include _670px{
+          flex-direction: column;
+        }
+        &_title {
+          display: flex;
+          flex-direction: column;
+          gap: 20px;
+          justify-content: center;
+          
+          &_h1 {
+            font-weight: 500;
+            font-size: 24px;
+            line-height: 26px;
+          }
+          &_p {
+            font-weight: 400;
+            font-size: 16px;
+            line-height: 24px;
+            color: #333333;
+            max-width: 365px;
+          }
+        }
+      }
+    }
   }
 }
-
+.btn {
+  border-radius: 10px;
+  cursor: pointer;
+  border: 2px solid #000000;
+}
 .border__progress {
   max-width: 160px;
   height: 4px;
