--- a/setting/scss/_info.scss
+++ b/setting/scss/_info.scss
@@ -9,166 +9,165 @@
   }
   &__sova {
     position: relative;
-    &__title {
+    &__text {
       position: absolute;
       top: 15px;
       left: 60px;
       display: flex;
       flex-direction: column;
       gap: 20px;
-
-      &__text {
-        font-weight: 600;
-        font-size: 16px;
-        line-height: 20px;
-        color: #000000;
-      }
-      &__p {
-        font-weight: 500;
-        font-size: 16px;
-        line-height: 20px;
-        color: #000000;
-      }
-      &__end {
-        font-weight: 500;
-        font-size: 16px;
-        line-height: 20px;
-        color: #000000;
-      }
+    }
+    &__title {
+      font-weight: 600;
+      font-size: 16px;
+      line-height: 20px;
+      color: #000000;
+    }
+    &__p {
+      font-weight: 500;
+      font-size: 16px;
+      line-height: 20px;
+      color: #000000;
+    }
+    &__end {
+      font-weight: 500;
+      font-size: 16px;
+      line-height: 20px;
+      color: #000000;
     }
   }
-  &__select {
-    &__old {
+
+  &__old {
+    display: flex;
+    border-bottom: 1px solid #e0e0e0;
+    width: 762.7px;
+    max-height: 75px;
+    margin-left: 58.5px;
+    @include _992px {
+      width: 600px;
+    }
+    @include _670px {
+      max-width: 400px;
+      margin-left: 0px;
+      max-height: 100%;
+      justify-content: space-between;
+      align-items: center;
+    }
+    @include _500px {
+      max-width: 350px;
+    }
+    @include _350px {
+      max-width: 280px;
+    }
+    &__title {
       display: flex;
-      border-bottom: 1px solid #e0e0e0;
-      width: 762.7px;
-      max-height: 75px;
-      margin-left: 58.5px;
-      @include _992px {
-        width: 600px;
-      }
-      @include _670px {
-        max-width: 400px;
-        margin-left: 0px;
-        max-height: 100%;
-        justify-content: space-between;
-        align-items: center;
-      }
-      @include _500px {
-        max-width: 350px;
-      }
+      flex-direction: column;
+      padding: 5px;
+      gap: 5px;
+      max-width: 123px;
       @include _350px {
-        max-width: 280px;
+        padding: 0;
       }
-      &__section {
-        display: flex;
-        gap: 10px;
-        align-items: center;
-        padding: 14px;
-        cursor: pointer;
-
-        &__title {
-          display: flex;
-          flex-direction: column;
-          padding: 5px;
-          gap: 5px;
-          @include _350px {
-            padding: 0;
-          }
-          &_h1 {
-            font-weight: 700;
-            font-size: 16px;
-            line-height: 20px;
-            color: #000000;
-            @include _500px {
-              font-size: 10px;
-              line-height: 10px;
-            }
-          }
-          &_p {
-            font-weight: 400;
-            font-size: 12px;
-            line-height: 15px;
-            color: #4f4f4f;
-            @include _500px {
-              font-size: 9px;
-              line-height: 5px;
-            }
-          }
+      &_h1 {
+        font-weight: 700;
+        font-size: 16px;
+        line-height: 20px;
+        color: #000000;
+        @include _500px {
+          font-size: 10px;
+          line-height: 10px;
+        }
+      }
+      &_p {
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 15px;
+        color: #4f4f4f;
+        @include _500px {
+          font-size: 9px;
+          line-height: 5px;
         }
       }
     }
-    &__button {
-      margin: 40px;
-      margin-left: 55px;
+    &__section {
+      display: flex;
+      gap: 10px;
+      align-items: center;
+      padding: 14px;
+      cursor: pointer;
+    }
+  }
+  &__button {
+    margin: 40px;
+    margin-left: 55px;
+    @include _800px {
+      margin: 20px;
+    }
+    &__block {
+      display: flex;
+      gap: 20px;
+      padding: 10px;
+      position: relative;
       @include _800px {
-        margin: 20px;
-      }
-      &__block {
-        display: flex;
-        gap: 20px;
-        padding: 10px;
-        position: relative;
-        @include _800px {
-          gap: 10px;
-          padding: 5px;
-          flex-direction: column;
-        }
-      }
-      &__style {
-        font-weight: 500;
-        font-size: 14px;
-        line-height: 17px;
-        text-align: center;
-        z-index: 10;
-        padding: 15px;
-        color: #000000;
-        border: none;
-        position: relative;
-        border-radius: 10px;
-        cursor: pointer;
-        @include _670px {
-          padding: 10px;
-        }
-        &:hover::after {
-          opacity: 0.2;
-          top: -10px;
-          right: -10px;
-          bottom: -10px;
-          left: -10px;
-          border-radius: 20px;
-        }
-        &::before {
-          width: 100%;
-          height: 100%;
-          top: 0;
-          left: 0;
-          right: 0;
-          content: "";
-          position: absolute;
-          z-index: -1;
-          background: white;
-          opacity: 1;
-          border-radius: 6px;
-        }
-
-        &::after {
-          transition: 0.3s;
-          bottom: 0;
-          top: 0;
-          left: 0;
-          right: 0;
-          content: "";
-          position: absolute;
-          z-index: -2;
-          background: linear-gradient(90deg, #f7941d 0%, #27aae1 100%);
-          opacity: 0.3;
-          filter: blur(5px);
-          border-radius: 5px;
-        }
+        gap: 10px;
+        padding: 5px;
+        flex-direction: column;
       }
     }
   }
+  &__btn {
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 17px;
+    text-align: center;
+    z-index: 10;
+    padding: 15px;
+    color: #000000;
+    border: none;
+    position: relative;
+    border-radius: 10px;
+    cursor: pointer;
+    @include _670px {
+      padding: 10px;
+    }
+    &:hover::after {
+      opacity: 0.2;
+      top: -10px;
+      right: -10px;
+      bottom: -10px;
+      left: -10px;
+      border-radius: 20px;
+    }
+    &::before {
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      right: 0;
+      content: "";
+      position: absolute;
+      z-index: -1;
+      background: white;
+      opacity: 1;
+      border-radius: 6px;
+    }
+
+    &::after {
+      transition: 0.3s;
+      bottom: 0;
+      top: 0;
+      left: 0;
+      right: 0;
+      content: "";
+      position: absolute;
+      z-index: -2;
+      background: linear-gradient(90deg, #f7941d 0%, #27aae1 100%);
+      opacity: 0.3;
+      filter: blur(5px);
+      border-radius: 5px;
+    }
+  }
+
   &__video {
     display: flex;
     justify-content: center;
@@ -178,13 +177,12 @@
       margin: 0;
     }
   }
-
   &__main {
     display: flex;
-    justify-content: center; 
-    align-items: center; 
+    justify-content: center;
+    align-items: center;
     flex-direction: column;
-    @include _1100px{
+    @include _1100px {
       display: block;
     }
     @include _670px {
@@ -193,196 +191,267 @@
     @include _500px {
       margin: 0;
     }
-    &__text {
-      font-weight: 700;
-      font-size: 24px;
-      line-height: 34px;
-      color: #000000;
-      margin-left: 20px;
-      margin-top: -70px;
-      max-width: 780px;
-      margin-right: 400px;
-      @include _1200px{
-        margin-right: 0;
-      }
-      @include _500px {
-        margin-top: -30px;
-        font-size: 16px;
-        line-height: 1.2;
-      }
+  }
+}
+.main {
+  &__text {
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 34px;
+    color: #000000;
+    margin-left: 20px;
+    margin-top: -70px;
+    max-width: 780px;
+    margin-right: 400px;
+    @include _1200px {
+      margin-right: 0;
     }
-    &__aside {
+    @include _500px {
+      margin-top: -30px;
+      font-size: 16px;
+      line-height: 1.2;
+    }
+  }
+  &__aside {
+    display: flex;
+    gap: 120px;
+    margin-top: 40px;
+    margin-left: 20px;
+    margin-right: 320px;
+    @include _1200px {
+      margin-right: 0;
+    }
+    @include _992px {
+      gap: 50px;
+    }
+    @include _500px {
+      gap: 30px;
+    }
+    &__content {
       display: flex;
-      gap: 120px;
-      margin-top: 40px;
-      margin-left: 20px; 
-      margin-right: 320px;
-      @include _1200px{
-        margin-right: 0;
+      flex-direction: column;
+    }
+    &__number {
+      font-weight: 700;
+      font-size: 86px;
+      line-height: 105px;
+      text-transform: capitalize;
+      color: white;
+      background: linear-gradient(90deg, #f7941d 0%, #4c8b09 25%, #27aae1 40%);
+      background-size: 200% 200%;
+      -webkit-background-clip: text;
+      -webkit-text-stroke: 8px transparent;
+      @include _1100px {
+        font-size: 60px;
+        line-height: 70px;
+        -webkit-text-stroke: 5px transparent;
       }
       @include _992px {
-        gap: 50px;
+        font-size: 40px;
+        line-height: 40px;
       }
       @include _500px {
-        gap: 30px;
+        font-size: 34px;
+        line-height: 40px;
+      }
+      @include _350px {
+        font-size: 23px;
+        -webkit-text-stroke: 3px transparent;
+      }
+    }
+    &__text {
+      font-weight: 500;
+      font-size: 20px;
+      line-height: 34px;
+      @include _1100px {
+        font-size: 16px;
+        line-height: 24px;
+      }
+      @include _500px {
+        font-size: 10.5px;
+        line-height: 14px;
+      }
+    }
+  }
+  &__block {
+    margin-top: 80px;
+    gap: 20px;
+    display: grid;
+    grid-template-columns: minmax(480px, 1fr) repeat(2, minmax(330px, 1fr));
+    max-width: 1180.18px;
+    @include _1250px {
+      display: inline-block;
+      max-width: 500px;
+    }
+    @include _1100px {
+      margin-left: 220px;
+    }
+    @include _992px {
+      margin-left: 200px;
+    }
+    @include _800px {
+      margin-left: 100px;
+    }
+    @include _670px {
+      margin-left: 60px;
+      max-width: 450px;
+    }
+    @include _500px {
+      margin-left: 40px;
+      max-width: 300px;
+    }
+    @include _350px {
+      max-width: 250px;
+      margin-left: 40px;
+    }
+    &__day-open-door {
+      display: flex;
+      background-color: #f7bc75;
+      padding: 44px;
+      border-radius: 20px;
+      gap: 40px;
+      grid-column: span 3;
+      @include _1250px {
+        display: block;
+        text-align: center;
+        margin-bottom: 10px;
       }
 
-      &__content {
+      &_date {
         display: flex;
         flex-direction: column;
-        &_number {
+        &_num {
+          color: #000000;
+          font-size: 100px;
+          line-height: 80px;
           font-weight: 700;
-          font-size: 86px;
-          line-height: 105px;
-          text-transform: capitalize;
-          color: white;
-          background: linear-gradient(
-            90deg,
-            #f7941d 0%,
-            #4c8b09 25%,
-            #27aae1 40%
-          );
-          background-size: 200% 200%;
-          -webkit-background-clip: text;
-          -webkit-text-stroke: 8px transparent;
-          @include _1100px {
-            font-size: 60px;
-            line-height: 70px;
-            -webkit-text-stroke: 5px transparent;
-          }
-          @include _992px {
-            font-size: 40px;
-            line-height: 40px;
-          }
-          @include _500px {
-            font-size: 34px;
-            line-height: 40px;
-          }
-          @include _350px {
-            font-size: 23px;
-            -webkit-text-stroke: 3px transparent;
-          }
         }
-        &_text {
+        &_season {
+          color: #000000;
+          font-size: 30px;
+          font-weight: 700;
+        }
+      }
+      &_text {
+        display: flex;
+        flex-direction: column;
+        gap: 30px;
+        &_title {
           font-weight: 500;
-          font-size: 20px;
-          line-height: 34px;
-          @include _1100px {
-            font-size: 16px;
-            line-height: 24px;
-          }
-          @include _500px {
-            font-size: 10.5px;
-            line-height: 14px;
-          }
+          font-size: 36px;
+          line-height: 26px;
+        }
+        &_p {
+          font-weight: 400;
+          font-size: 18px;
+          line-height: 26px;
+          color: #333333;
+          max-width: 717px;
+        }
+      }
+      &_button {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        &_btn {
+          padding: 18px 67px;
+          background-color: #f7bc75;
+          cursor: pointer;
+          display: flex;
+          gap: 10px;
+          text-align: center;
         }
       }
     }
-    &__block {
-      margin-top: 80px;
-      gap: 20px;
-      display: grid;
-      grid-template-columns: minmax(480px, 1fr) repeat(2, minmax(330px, 1fr));
-      max-width: 1180.18px;
-      @include _1250px{
-        display: inline-block; 
-        max-width: 500px;
+    &__program {
+      display: flex;
+      flex-direction: column;
+      text-align: center;
+      align-items: center;
+      background: #c5ddff;
+      border-radius: 20px;
+      gap: 40px;
+      padding: 50px;
+      grid-row: span 2;
+      @include _1250px {
+        margin-bottom: 10px;
       }
-      @include _1100px{
-        margin-left: 220px;
+      &_title {
+        font-weight: 500;
+        font-size: 24px;
+        line-height: 26px;
       }
-      @include _992px{
-        margin-left: 200px;
+      &_p {
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 24px;
+        color: #333333;
+        max-width: 400px;
       }
-      @include _800px{
-        margin-left: 100px;
+      &_btn {
+        background: #c5ddff;
+        padding: 12px 61px;
       }
-      @include _670px{
-        margin-left: 60px;
-        max-width: 450px;
+    }
+    &__news {
+      background: #b8efcf;
+      border-radius: 20px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      cursor: pointer;
+      gap: 45px;
+      &_title {
+        font-weight: 500;
+        font-size: 24px;
+        line-height: 26px;
       }
-      @include _500px{
-        margin-left: 40px;
-        max-width: 300px;
+      @include _1250px {
+        margin-bottom: 10px;
+        padding: 30px;
       }
-      @include _350px{
-        max-width: 250px;
-        margin-left: 40px;
+    }
+    &__world-it {
+      background: #ffeef6;
+      border-radius: 20px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      gap: 45px;
+      cursor: pointer;
+      @include _1250px {
+        padding: 30px;
+        margin-bottom: 10px;
       }
-      &__day-open-door {
-        display: flex;
-        background-color: #f7bc75;
-        padding: 44px;
-        border-radius: 20px;
-        gap: 40px;
-        grid-column: span 3;
-        @include _1250px{
-          display: block;
-          text-align: center;
-          margin-bottom: 10px;
-        }
+      &_title {
+        font-weight: 500;
+        font-size: 24px;
+        line-height: 26px;
+      }
+    }
+    &__test {
+      display: flex;
+      padding: 40px;
+      align-items: center;
+      background: #ffe38e;
+      border-radius: 20px;
+      gap: 30px;
+      cursor: pointer;
 
-        &_date {
-          display: flex;
-          flex-direction: column;
-          &_num {
-            color: #000000;
-            font-size: 100px;
-            line-height: 80px;
-            font-weight: 700;
-          }
-          &_season {
-            color: #000000;
-            font-size: 30px;
-            font-weight: 700;
-          }
-        }
-        &_text {
-          display: flex;
-          flex-direction: column;
-          gap: 30px;
-          &_title {
-            font-weight: 500;
-            font-size: 36px;
-            line-height: 26px;
-          }
-          &_p {
-            font-weight: 400;
-            font-size: 18px;
-            line-height: 26px;
-            color: #333333;
-            max-width: 717px;
-          }
-        }
-        &_button {
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          text-align: center;
-          &_btn {
-            padding: 18px 67px;
-            background-color: #f7bc75;
-            cursor: pointer;
-            display: flex;
-            gap: 10px;
-            text-align: center;
-          }
-        }
+      grid-column: span 2;
+      @include _670px {
+        flex-direction: column;
       }
-      &__program {
+      &_title {
         display: flex;
         flex-direction: column;
-        text-align: center;
-        align-items: center;
-        background: #c5ddff;
-        border-radius: 20px;
-        gap: 40px;
-        padding: 50px;
-        grid-row: span 2;
-        @include _1250px{
-          margin-bottom: 10px;
-        }
-        &_title {
+        gap: 20px;
+        justify-content: center;
+
+        &_h1 {
           font-weight: 500;
           font-size: 24px;
           line-height: 26px;
@@ -392,82 +461,7 @@
           font-size: 16px;
           line-height: 24px;
           color: #333333;
-          max-width: 400px;
-        }
-        &_btn {
-          background: #c5ddff;
-          padding: 12px 61px;
-        }
-      }
-      &__news {
-        background: #b8efcf;
-        border-radius: 20px;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        cursor: pointer;
-        gap: 45px;
-        &_title {
-          font-weight: 500;
-          font-size: 24px;
-          line-height: 26px;
-        }
-        @include _1250px{
-          margin-bottom: 10px;
-          padding: 30px;
-        }
-      }
-      &__world-it {
-        background: #ffeef6;
-        border-radius: 20px;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        gap: 45px;
-        cursor: pointer;
-        @include _1250px{
-          padding: 30px;
-          margin-bottom: 10px;
-        }
-        &_title {
-          font-weight: 500;
-          font-size: 24px;
-          line-height: 26px;
-        }
-      }
-      &__test {
-        display: flex;
-        padding: 40px;
-        align-items: center;
-        background: #ffe38e;
-        border-radius: 20px;
-        gap: 30px;
-        cursor: pointer;
-
-        grid-column: span 2;
-        @include _670px{
-          flex-direction: column;
-        }
-        &_title {
-          display: flex;
-          flex-direction: column;
-          gap: 20px;
-          justify-content: center;
-          
-          &_h1 {
-            font-weight: 500;
-            font-size: 24px;
-            line-height: 26px;
-          }
-          &_p {
-            font-weight: 400;
-            font-size: 16px;
-            line-height: 24px;
-            color: #333333;
-            max-width: 365px;
-          }
+          max-width: 365px;
         }
       }
     }
@@ -493,7 +487,7 @@
   }
 }
 .margin_left {
-  margin-left: 90px;
+  margin-left: 70px;
   @include _992px {
     margin-left: 40px;
   }
